[package]
name = "chatter-rs"
version = "0.1.0"
authors = ["Mats Kindahl <mats.kindahl@gmail.com>"]
edition = "2018"

[lib]
name = "chatter"
path = "src/lib.rs"

[dependencies]
bytes = "0.4.7"
chrono = { version = "0.4", features = ["serde"] }
env_logger = { version = "0.5", default-features = false }
futures = "0.1.20"
log = "0.4.6"
serde = "1.0.43"
serde_cbor = "0.8.2"
serde_derive = "1.0.43"
tokio = "0.1"
uuid = { version = "0.6.3", features = ["v4","serde"] }
