# Copyright 2019 Mats Kindahl
#
# Licensed under the Apache License, Version 2.0 (the "License"); you
# may not use this file except in compliance with the License.  You
# may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.  See the License for the specific language governing
# permissions and limitations under the License.

[package]
name = "chatter-rs"
version = "0.1.0"
authors = ["Mats Kindahl <mats.kindahl@gmail.com>"]
edition = "2018"

[lib]
name = "chatter"
path = "src/lib.rs"

[dependencies]
bytes = "0.4.7"
chrono = { version = "0.4", features = ["serde"] }
env_logger = { version = "0.5", default-features = false }
futures = "0.1.20"
log = "0.4.6"
serde = "1.0.43"
serde_cbor = "0.8.2"
serde_derive = "1.0.43"
tokio = "0.1"
uuid = { version = "0.6.3", features = ["v4","serde"] }
